@startuml
class MockPlantStore {
    + MockPlantStore()
    - <<async>> Load() : void
    + GetCategory(id:int) : Task<ICategory?>
    + GetShop(id:int) : Task<IShop?>
    + GetOffers(plantId:int) : Task<List<IOffer>>
    + GetPlants(userId:int) : Task<List<IPlant>>
    + GetCategories() : Task<List<ICategory>>
    + GetShops() : Task<List<IShop>>
    + GetPlants() : Task<List<IPlant>>
    + AddUserPlant(userId:int, plantId:int) : Task
    + DeleteUserPlant(userId:int, plantId:int) : Task
    + GetRating(offerId:int, userId:int) : Task<IOfferRating>
    + SetRating(offerRating:IOfferRating) : Task
    + GetOfferFollows(userId:int) : Task<List<IOfferFollow>>
    + IsFollow(offerId:int, userId:int) : Task<bool>
    + SetFollow(offerId:int, userId:int, isFollow:bool) : Task
    + NewOfferFollow(offerId:int, userId:int) : Task<IOfferFollow>
}
interface IPlantStore {
    GetCategory(id:int) : Task<ICategory?>
    GetShop(id:int) : Task<IShop?>
    GetOffers(plantId:int) : Task<List<IOffer>>
    GetPlants(userId:int) : Task<List<IPlant>>
    GetCategories() : Task<List<ICategory>>
    GetShops() : Task<List<IShop>>
    GetPlants() : Task<List<IPlant>>
    AddUserPlant(userId:int, plantId:int) : Task
    DeleteUserPlant(userId:int, plantId:int) : Task
    GetRating(offerId:int, userId:int) : Task<IOfferRating>
    SetRating(offerRating:IOfferRating) : Task
    GetOfferFollows(userId:int) : Task<List<IOfferFollow>>
    IsFollow(offerId:int, userId:int) : Task<bool>
    SetFollow(offerId:int, userId:int, isFollow:bool) : Task
    NewOfferFollow(offerId:int, userId:int) : Task<IOfferFollow>
}
class "List"<T> {
}
IPlantStore <|-- MockPlantStore
MockPlantStore o-> "_categories<ICategory>" "List"
MockPlantStore o-> "_shops<IShop>" "List"
MockPlantStore --> "_plants<IPlant>" "List"
MockPlantStore o-> "_offers<IOffer>" "List"
class MockUserStore {
    + GetUser(login:string) : Task<IUser?>
}
IUserStore <|-- MockUserStore
interface IUserStore {
    GetUser(login:string) : Task<IUser?>
}
@enduml